--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,10 @@
         <param-name>javax.faces.PROJECT_STAGE</param-name>
         <param-value>Development</param-value>
     </context-param>
+    <listener>
+        <description>session timeout dinamic</description>
+        <listener-class>it.cnr.to.geoclimalp.dbalps.MyHttpSessionListener</listener-class>
+    </listener>
     <servlet>
         <servlet-name>Faces Servlet</servlet-name>
         <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
@@ -13,13 +17,12 @@
         <servlet-name>Faces Servlet</servlet-name>
         <url-pattern>/faces/*</url-pattern>
     </servlet-mapping>
+   
     <session-config>
-        <session-timeout>
-            30
-        </session-timeout>
+        <session-timeout>120</session-timeout>
     </session-config>
     <welcome-file-list>
-        <welcome-file>faces/index.xhtml</welcome-file>
+        <welcome-file>faces/index.jsp</welcome-file>
     </welcome-file-list>
     <resource-ref>
         <res-ref-name>dbalp</res-ref-name>
@@ -33,4 +36,4 @@
         <res-auth>Container</res-auth>
         <res-sharing-scope>Shareable</res-sharing-scope>
     </resource-ref>
-</web-app>
+    </web-app>
