--- a/src/main/resources/it/cnr/to/geoclimalp/dbalps/resources/string.properties
+++ b/src/main/resources/it/cnr/to/geoclimalp/dbalps/resources/string.properties
@@ -3,7 +3,7 @@
 # and open the template in the editor.
 
 #Processo
-titoloProcesso=Dati Sul Processo
+titoloProcesso=Dati sul processo
 nome=Nome
 anno=Anno
 mese=
@@ -60,7 +60,7 @@ attendibilita=
 puntuale=
 areale=
 indicativa=
-=
+
 
 
 
@@ -81,6 +81,54 @@ caratteristicaSito=
 tipoProcesso=
 lito=
 effMorfologici=
-nomeLitologia=
 proprietaTermiche=
 statoFrattura=
+datiSullaStazione=
+aggregazioneTemporale=
+tipoDiAggregazioneGiornaliera=
+dataInizio=
+dataFine=
+ente=
+sensori=
+inserisciStazione=
+inserisciProcesso=
+titoloStazione=
+datiUbicazione=
+caratteristicheSitoStazione=
+inserisciDatiClimatici=
+allegatoProcesso=
+allegatoStazione=
+inserisci=
+mostra=
+mostraTuttiProcessi=
+mostraTutteStazioni=
+ricerca=
+ricercaProcesso=
+ricercaStazione=
+queryClimatiche=
+elaborazioni=
+areaRiservata=
+creaUtente=
+visualizzaUtenti=
+documentazione=
+applicazioneAndroid=
+statistiche=
+affidabilitaCoordinate=
+evento=
+dettagliEvento=
+tipologia=
+ubicazione=
+morfologiaSito=
+altezzaNicchia=
+larghezzaNicchia=
+superficieNicchia=
+volumeNicchia=
+classeVolume=
+distanzaPropagazione=
+volumeAccumulo=
+superficieAccumulo=
+geologia=
+proprietatermiche=
+impatti=
+inserimento=
+consultazione=
