query+modifica allegato

--- a/src/main/resources/it/cnr/to/geoclimalp/dbalps/resources/string.properties
+++ b/src/main/resources/it/cnr/to/geoclimalp/dbalps/resources/string.properties
@@ -170,3 +170,10 @@ ricercaStazione=
 climatiche=
 elaborazioni=
 modificaProc=
+noDiritti=
+autore=
+titolo=
+in=
+urlDelSito=
+caricaFile=
+allega=
