--- a/src/main/resources/it/cnr/to/geoclimalp/dbalps/resources/string.properties
+++ b/src/main/resources/it/cnr/to/geoclimalp/dbalps/resources/string.properties
@@ -170,10 +170,9 @@ ricercaStazione=
 climatiche=
 elaborazioni=
 modificaProc=
+datiPrecipitazione=
+datiAvg=
+datiMin=
+datiMax=
+datiClimatici=
 noDiritti=
-autore=
-titolo=
-in=
-urlDelSito=
-caricaFile=
-allega=
