aggiustato danni processo e altre cose ah logo nuovo

--- a/src/main/resources/it/cnr/to/geoclimalp/dbalps/resources/string.properties
+++ b/src/main/resources/it/cnr/to/geoclimalp/dbalps/resources/string.properties
@@ -38,7 +38,7 @@ data=
 danneggiato=
 distrutto=
 minacciato=
-
+allProcess=
 
 #Ubicazione
 titoloUbicazione=
@@ -95,6 +95,9 @@ dataInizio=
 dataFine=
 ente=
 sensori=
+
+
+#parole varie
 inserisciStazione=
 inserisciProcesso=
 titoloStazione=
@@ -170,10 +173,4 @@ ricercaStazione=
 climatiche=
 elaborazioni=
 modificaProc=
-noDiritti=
-autore=
-titolo=
-in=
-urlDelSito=
-caricaFile=
-allega=
+noDiritti
