fatti alcuni aggiustamenti nella servlet per poter aggiustare il modifica (si prevede di usare jsf)

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -13,11 +13,34 @@
         <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
         <load-on-startup>1</load-on-startup>
     </servlet>
+    <servlet>
+        <servlet-name>processoServlet</servlet-name>
+        <servlet-class>it.cnr.to.geoclimalp.dbalps.Servlet.processoServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>Servlet</servlet-name>
+        <servlet-class>it.cnr.to.geoclimalp.dbalps.Servlet.Servlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>servletJson</servlet-name>
+        <servlet-class>it.cnr.to.geoclimalp.dbalps.Servlet.servletJson</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>Faces Servlet</servlet-name>
         <url-pattern>/faces/*</url-pattern>
     </servlet-mapping>
-   
+    <servlet-mapping>
+        <servlet-name>processoServlet</servlet-name>
+        <url-pattern>/processoServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Servlet</servlet-name>
+        <url-pattern>/Servlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>servletJson</servlet-name>
+        <url-pattern>/servletJson</url-pattern>
+    </servlet-mapping>
     <session-config>
         <session-timeout>120</session-timeout>
     </session-config>
@@ -36,4 +59,4 @@
         <res-auth>Container</res-auth>
         <res-sharing-scope>Shareable</res-sharing-scope>
     </resource-ref>
-    </web-app>
+</web-app>
