dovrebbero essere corrette le modifiche(ci sono ancora dei difettucci)

--- a/src/main/resources/it/cnr/to/geoclimalp/dbalps/resources/string.properties
+++ b/src/main/resources/it/cnr/to/geoclimalp/dbalps/resources/string.properties
@@ -180,9 +180,9 @@ datiMax=
 datiClimatici=
 noDiritti=
 autore=
-titolo=
+titolo=Title
 in=
-urlDelSito=
+urlDelSito=URL
 allegaFileAProcesso=
 caricaFile=
 allega=
