aggiunti nomi inglesi

--- a/src/main/resources/it/cnr/to/geoclimalp/dbalps/resources/string.properties
+++ b/src/main/resources/it/cnr/to/geoclimalp/dbalps/resources/string.properties
@@ -187,3 +187,6 @@ allegaFileAProcesso=
 caricaFile=
 allega=
 allegaFileAStazione=
+ScegliProcessoAllegato=
+ScegliStazioneAllegato=
+dettagliStazione=
